# airgradient_esphome

./: .gitignore  README.md  airgradient-basic.yaml  airgradient-one.yaml  airgradient-open-air-co2.yaml  airgradient-open-air-o-1ppt.yaml  airgradient-open-air-o-1pst.yaml  airgradient-open-air.yaml  airgradient-pro.yaml  airgradient.yml  airgradient_pro.yaml  calibration.md  configuration.md  devices.yaml  installation.md  packages.md  pyproject.toml  secrets.yaml
full_config/: ag-basic-full.yaml  ag-basic.yaml  ag-one-full.yaml  ag-one.yaml  ag-open-air-co2-full.yaml  ag-open-air-o-1ppt.yaml  ag-open-air-o-1pst.yaml  ag-pro-full.yaml  ag-pro.yaml
includes/: binary_sensor_config_d7.yaml  binary_sensor_config_gpio9.yaml  button_s8_calibration.yaml  button_s8_calibration_disable.yaml  button_s8_calibration_enable.yaml  button_s8_calibration_interval.yaml  call_home_on_boot.yaml  display_sh1106_128_64.yaml  display_ssd1306_64_48.yaml  fonts.yaml  interval_airgradient_api_post.yaml  interval_airgradient_api_post_8266.yaml  interval_airgradient_api_post_8266_no_sgp41.yaml  interval_display_page_change.yaml  interval_watchdog.yaml  light_led.yaml  number_brightness.yaml  output_watchdog.yaml  sensor_aqi.yaml  sensor_pms5003.yaml  sensor_pms5003_aiq.yaml  sensor_pms5003_extended_life.yaml  sensor_pms5003t.yaml  sensor_pms5003t_extended_life.yaml  sensor_s8.yaml  sensor_s8_led.yaml  sensor_sgp41.yaml  sensor_sht30.yaml  sensor_sht40.yaml  sensor_uptime.yaml  sensor_wifi.yaml  substitutions.yaml  switch_display_temp.yaml  switch_safe_mode.yaml  switch_upload_airgradient.yaml
(+6 files in other folders)
